src/less/main.less
/**
*
* General
*
*/

html, body {
  height: 100%;
}

a, button, .btn, .list-group-item:hover {
  cursor: default;
}

#urlbar {
  height: 25px;
  text-align: center;
}

.form-control {
  font-size: .85rem;
}



/**
*
* Navbar
*
*/

.navbar {

  opacity: .975;
  -webkit-app-region: drag;

  .btn {

    height: 24px;
    padding: 0;
    font-size: .85rem;
  }
}

/**
*
* Sidebar
*
*/
#sidebar {
  -webkit-app-region: drag;
  transition: .3s ease all;
  height: 95%;
  position: fixed;
  top: 2.5em;
  border: 5px solid;
  background-color: #373a3c;
  width: 20em;
}

.show-sidebar {
  opacity: .975;
  left: 0;
}

.hide-sidebar {
  opacity: 0;
  left: -20em;
}

#resizebar {
  position: fixed;
  width: 3px;
  height: 96%;
  background-color: #969696;
  top: 2.5em;
  left: 20em;

  &:hover {
    cursor: ew-resize;
  }
}

/**
*
* Tabs
*
*/
#tabs {

  background-color: #333;
  border-color: #333;
  margin-top: 8px;
  height: 100%;
  overflow-y: auto;

  .list-group-item {
    border: none;
    padding: 0.125rem 1.25rem;
  }

  a.list-group-item {

    color: #ddd;
    background-color: #555;
    font-size: .85rem;
    word-break: keep-all;

    &.active {
      background-color: #666;
    }

    &:hover {
      background-color: #373a3c;
      border-right: 25px outset rgb(255, 88, 88);
      border-left: 10px inset;
      padding-left: 10px;
    }

    &.active:hover {
      color: #5bc0de;
    }
  }

}

/**
*
* Webviews
*
*/

#views, .view {
  display: inline-flex;
  width: 100%;
  height: 100%;
}

#views {
  margin-top: 41px;
}

.view.hide {
  flex: 0 1;
  width: 0px;
  height: 0px;
}

